--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This Is Ahmed Parbes</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+
+<section class="top-banner">
+
+    <body>
+        <div class="half-widht">
+            <h1>Hello Buddy</h1>
+            <h1>This is <span class="name">Ahmed Parbes</span></h1>
+            <h3>I can Blame you Buddy!</h3>
+            <p>Hello I am Ahmed Parbes. I must not fear. Fear is the mind-killer. Fear is the little-death that brings
+                total
+                obliteration. I will face my fear. I will permit it to pass over me and through me. And when it has gone
+                past, I will turn the inner eye to see its path. Where the fear has gone, there will be nothing. Only I
+                will
+                remain.</p>
+            <a class="link-button" target="_blank" href="https://fbhelpbd.com">Hire Me</a>
+        </div>
+        <div class="half-image">
+            <img src="image/my-bg.png" alt="">
+        </div>
+</section>
 </body>
+
 </html>
