--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
             <img src="image/my-bg.png" alt="">
         </div>
 </section>
+<section class="become-a-hero">
+
+    <div class="half-image">
+        <img src="image/jhankar.png" alt="">
+    </div>
+    <div class="half-widht">
+        <h1>Become a hero</h1>
+        <h3>Mission possible ..</h3>
+        <p>I will permit it to pass over me and through me. And when it has gone past, I will turn the inner eye to see
+            its path. Where the fear has gone, there will be nothing. Only I will remain.</p>
+        remain.</p>
+        <a class="link-button" target="_blank" href="https://fbhelpbd.com">Hire Me</a>
+    </div>
+</section>
+
 </body>
 
 </html>
