--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<section class="top-banner">
+<section class="top-banner flexible-container">
 
     <body>
         <div class="half-widht">
@@ -31,7 +31,7 @@
             <img src="image/my-bg.png" alt="">
         </div>
 </section>
-<section class="become-a-hero">
+<section class="become-a-hero flexible-container">
 
     <div class="half-image">
         <img src="image/jhankar.png" alt="">
@@ -43,6 +43,25 @@
             its path. Where the fear has gone, there will be nothing. Only I will remain.</p>
         remain.</p>
         <a class="link-button" target="_blank" href="https://fbhelpbd.com">Hire Me</a>
+    </div>
+</section>
+
+
+<section class="Experince Read">
+    <h1>Experince</h1>
+
+    <div class="flexible-container">
+
+        <div class="half-widht">
+            <h1>Baby web devoloper</h1>
+            <h3>2021 still Present</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        </div>
+        <div class="half-widht">
+            <h1>Full Stack Devolopment</h1>
+            <h3>2021 still Present</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ex rem consectetur quidem tenetur!</p>
+        </div>
     </div>
 </section>
 
