--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
 
 
 <section class="Experince Read">
-    <h1>Experince</h1>
+    <h2>Experince</h2>
 
     <div class="flexible-container">
 
-        <div class="half-widht">
-            <h1>Baby web devoloper</h1>
-            <h3>2021 still Present</h3>
+        <div class="Experince-ap">
+            <h2>Baby web devoloper</h2>
+            <h3 class="name">2021 still Present</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         </div>
-        <div class="half-widht">
-            <h1>Full Stack Devolopment</h1>
-            <h3>2021 still Present</h3>
+        <div class="Experince-ap">
+            <h2>Full Stack Devolopment</h2>
+            <h3 class="name">2021 still Present</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ex rem consectetur quidem tenetur!</p>
         </div>
     </div>
