--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
     <div class="flexible-container">
 
-        <div class="Experince-ap">
+        <div id="ex" class="Experince-ap">
             <h2>Baby web devoloper</h2>
             <h3 class="name">2021 still Present</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         </div>
-        <div class="Experince-ap">
+        <div id="ex2" class="Experince-ap">
             <h2>Full Stack Devolopment</h2>
             <h3 class="name">2021 still Present</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ex rem consectetur quidem tenetur!</p>
